# dolphindb-mcp-server

./: .env.example  .gitignore  README.md  ddb.py  pyproject.toml  server.py  uvx.json
dolphindb_mcp_server/: .server.py.swp  server.py
