[project]
name = "dolphindb-mcp-server"
version = "0.1.0"
description = "dolphindb mcp server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dolphindb",
    "httpx>=0.28.1",
    "mcp>=1.1.2",
    "fastapi[standard]",
    "fastmcp"
]


[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dolphindb_mcp_server"]

[project.scripts]
dolphindb-mcp-server = "dolphindb_mcp_server.server:main"
